styles.scss
@use "sass:math";

// Bootstrap colors
$white: #fff;
$body-color: #111;
$dark: #333;
$primary: #075ea2;
$success: #167d2e;
$info: #097182;
$input-border-color: #969696;
$navbar-dark-color: rgba($white, 0.8);
$text-dark: #343a40;
$text-muted: rgb(104, 104, 104);
// Responsive texts
$enable-responsive-font-sizes: true;

// Viewports
$viewport-xs: 320px;
$viewport-sm: 576px;
$viewport-md: 768px;
$viewport-lg: 992px;
$viewport-xl: 1200px;

@import "./node_modules/bootstrap/scss/bootstrap.scss";

body {
  // Note: This is for header and footer to occupy the whole height of the
  // available viewport. Main content area is white background.
  background-color: $dark;
}

blockquote {
  q {
    font-family: Blanco, Georgia, serif;
    quotes: "“" "”" "‘" "’";
    &::before {
      content: open-quote;
    }
    &::after {
      content: close-quote;
    }
  }
}

.bottomed-paragraphs {
  p:last-child {
    margin-bottom: 0;
  }
}

.bg-primary-gradient {
  background: $primary;
  background: linear-gradient(15deg, #054a80, $primary);
}

.fs {
  &-7 {
    font-size: 0.85rem;
  }

  &-70p {
    font-size: 80%;
  }
}

.text-light-all {
  color: $white;
  a {
    color: $white;
  }
}

.invert {
  filter: invert(1);
}

.Chevrons {
  $chevrons-radius: 4px;
  $chevrons-size: 12px;
  font-size: 0.75em;
  font-weight: bold;
  padding-left: 0;
  margin-bottom: 0;

  li {
    &:before, &:after {
      position: absolute;
      right: 100%;
      content: "";
      top: 0;
      bottom: 0;
      border-style: solid;
      border-color: red; // remove me or adapt
      border-width: $chevrons-size 0 $chevrons-size math.div($chevrons-size, 2);
    }

    &:nth-child(odd) {
      background: $white;
      color: $primary;
      &:before {
        background: $primary;
        border-color: $primary;
        border-left-color: transparent;
      }
      &:after {
        background: $white;
        border-color: transparent;
        border-left-color: $primary;
      }
    }

    &:nth-child(even) {
      background: $primary;
      color: $white;
      &:before {
        background: $white;
        border-color: $white;
        border-left-color: transparent;
      }
      &:after {
        background: $primary;
        border-color: transparent;
        border-left-color: $white;
      }
    }

    &:first-child {
      &:before, &:after {
        content: none;
      }
      border-bottom-left-radius: $chevrons-radius;
      border-top-left-radius: $chevrons-radius;
    }

    &:last-child {
      border-bottom-right-radius: $chevrons-radius;
      border-top-right-radius: $chevrons-radius;
    }

    display: inline-block;
    line-height: $chevrons-size;
    margin-right: 5px;
    position: relative;
    padding: math.div($chevrons-size, 2);
  }
}

.Header {
  @media screen and (max-width: $viewport-sm) {
    position: sticky;
    top: 0;
    z-index: 1020;
  }
}

.MainMenu {
  @media screen and (max-width: $viewport-sm) {
    width: 100%;
  }
}

.Markdown {
  h2 {
    border-top: 1px solid #ccc;
    font-size: 1.5em;
    padding: 1em 0 .5em;
    margin-top: 1em;
  }

  h3 {
    font-size: 1.25em;
    padding: 1em 0 .5em;
    margin-top: .85em;
  }

  blockquote {
    color: $text-dark;
    border-left: 5px solid #ccc;
    font-style: italic;
    padding-left: .5em;
  }

  pre {
    background-color: rgb(14, 14, 36);
    border-radius: 8px;
    color: #fff;
    padding: 1em;
  }
}

.Simulator {
  @media screen and (max-width: $viewport-sm) {
    margin-top: 160px;

    >h1 {
      display: none;
    }
  }
}

.Summary {
  @media screen and (max-width: $viewport-sm) {
    position: fixed;
    z-index: 1020;
    top: 100px;
    left: 0;
    right: 0;

    .card {
      border: 0;
      .card-header {
        border-radius: 0;
      }
      .card-body {
        padding: 10px;
      }
    }

    .card-header {
      color: red;
    }
  }
}

